crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_index_and_unique_snapshot@unnamed_index_and_unique_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

import (
	"time"
)

type Events struct {
	ID      int32     `gorm:"column:id;primaryKey" json:"id"`
	VenueID int32     `gorm:"column:venue_id;not null;index:ix_events__date_venue_id;uniqueIndex:uq_events__date_venue_id" json:"venue_id"`
	Date    time.Time `gorm:"column:date;not null;type:date;index:ix_events__date_venue_id;uniqueIndex:uq_events__date_venue_id" json:"date"`
}

func (Events) TableName() string { return "events" }
