crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_index_and_unique_snapshot@unnamed_index_and_unique_Jpa.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
import jakarta.persistence.*;
import java.time.LocalDate;

@Entity
@Table(name = "events", indexes = {
    @Index(columnList = "venue_id, date")
}, uniqueConstraints = {
    @UniqueConstraint(columnNames = {"venue_id", "date"})
})
public class Events {

    @Id
    @Column(name = "id")
    private Integer id;

    @Column(name = "venue_id", nullable = false)
    private Integer venueId;

    @Column(name = "date", nullable = false)
    private LocalDate date;

    protected Events() {
    }
}
