crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_index_and_unique_snapshot@unnamed_index_and_unique_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Events {
  id Int @id
  venue_id Int
  date DateTime

  @@unique([venue_id, date], map: "uq_events__date_venue_id")
  @@index([venue_id, date], map: "ix_events__date_venue_id")
  @@map("events")
}
