crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_index_and_unique_snapshot@unnamed_index_and_unique_SeaOrm.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "events")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    pub venue_id: i32,
    pub date: Date,
}

// Index definitions (SeaORM uses Statement builders externally)
// (unnamed) on [venue_id, date]

/// Composite unique constraints — declare in migrations or use Statement builder.
pub const COMPOSITE_UNIQUES: &[&[&str]] = &[
    &["venue_id", "date"],
];
vespera::schema_type!(Schema from Model, name = "EventsSchema");
impl ActiveModelBehavior for ActiveModel {}
